Fixed title alignment

--- a/src/styles/ribbon.css
+++ b/src/styles/ribbon.css
@@ -10,4 +10,5 @@
   font-size: 60%;
   color: white;
   text-decoration: none;
+  vertical-align: center;
 }
